--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,6 @@
     "aes256": "^1.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "node-sass": "^7.0.1",
     "query-string": "^7.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -22,12 +21,13 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
+    "sass": "^1.95.0",
     "socket.io": "^4.0.0",
     "socket.io-client": "^4.0.0",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
