--- a/backend/package.json
+++ b/backend/package.json
@@ -11,8 +11,9 @@
   "dependencies": {
     "colors": "^1.4.0",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
+    "dotenv": "^8.6.0",
     "express": "^4.17.1",
+    "mongoose": "^9.0.1",
     "socket.io": "^4.0.0"
   },
   "devDependencies": {
