--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hooks": "^1.0.1",
+    "react-icons": "^5.5.0",
     "react-lottie": "^1.2.3",
     "react-redux": "^7.2.3",
     "react-router": "^5.2.0",
